--- a/geoszabaduloszoba-backend/src/main/resources/application.properties
+++ b/geoszabaduloszoba-backend/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=geoszabaduloszoba-backend
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/cityscape_db
+spring.datasource.username=postgres
+spring.datasource.password=geolokaciosadmin
+
+# Hibernate beállítások
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Karakterkódolás
+spring.sql.init.encoding=UTF-8
